PartManager: stop tracking a widget even if it is no longer top level

Fixes an access-to-deleted-object crash if a widget is top level when it
is added but no longer top level when it is removed.  Seen when exiting
System Settings.

REVIEW:126385
BUG:355711